# moto-db

./: .gitignore  main.py  models.py  moto.sqlite  pyproject.toml
app/: main.py  models.py
docs/: database.md
parser/: fetch_all_reviews.py  fetch_reviews.py
scripts/: backfill_school_slugs.py  curls.txt  enrich_metro_from_mos.py  extract_fields.py  fields.txt  get.py  import_extracted_to_sqlite.py  import_reviews_to_sqlite.py  metro_lines_data.py  migrate_normalize_metro.py  seed_fleet.py  seed_services.py  summary.json
scripts/extracted/: motorcycle_schools.csv  motorcycle_schools.json
scripts/responses/: response_skip_0.json  response_skip_100.json  response_skip_125.json  response_skip_150.json  response_skip_175.json  response_skip_200.json  response_skip_225.json  response_skip_25.json  response_skip_50.json  response_skip_75.json
