[project]
name = "moto-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "cyrtranslit>=1.2.0",
    "fastapi>=0.138.1",
    "psycopg>=3.3.4",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
